@@ -8,6 +8,8 @@ OBJ            = demo.o
 #MCU_TARGET     = at90s8515
 #MCU_TARGET     = at90s8535
 #MCU_TARGET     = atmega128
+#MCU_TARGET     = atmega1280
+#MCU_TARGET     = atmega1281
 #MCU_TARGET     = atmega16
 #MCU_TARGET     = atmega163
 #MCU_TARGET     = atmega164
@@ -22,6 +24,7 @@ OBJ            = demo.o
 #MCU_TARGET     = atmega3290
 #MCU_TARGET     = atmega48
 #MCU_TARGET     = atmega64
+#MCU_TARGET     = atmega640
 #MCU_TARGET     = atmega644
 #MCU_TARGET     = atmega645
 #MCU_TARGET     = atmega6450
